crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@basic.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "Hello {{ name }}!"
input_file: minijinja/tests/lexer-inputs/basic.txt
---
TemplateData("Hello ")
  "Hello "
VariableStart
  "{{"
Ident("name")
  "name"
VariableEnd
  "}}"
TemplateData("!")
  "!"

