crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@keep-trailing-newlines.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: Hello World!
input_file: minijinja/tests/lexer-inputs/keep-trailing-newlines.txt
---
TemplateData("Hello World!\n")
  "Hello World!\n"

