crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@single_brace.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "{foo} foo {bar}"
input_file: minijinja/tests/lexer-inputs/single_brace.txt
---
TemplateData("{foo} foo {bar}")
  "{foo} foo {bar}"

